完善BetterModUpload的基本功能

--- a/BetterModUpload/ModFiles/info.ini
+++ b/BetterModUpload/ModFiles/info.ini
@@ -1,5 +1,5 @@
-name = DuckovBetterModUpload
-displayName = 更好的Mod上传
-description = 支持 .SteamIgnore 文件配置不上传的文件（如运行时生成的配置文件、测试文件、自定义资源文件等）
+name = BetterModUpload
+displayName = 更好的Mod上传(Better Mod Upload)
+description = 支持 .steamignore 文件配置上传时忽略的文件(规则同 .gitignore)
 tag = Quality of Life, Visual Enhancements, Gameplay
 version = 1.0.0
