1.添加单位图标缩小 2.中心图标大小 根据大地图小地图区别调节

--- a/MiniMap/ModFiles/config/template/modConfigTemplate.json
+++ b/MiniMap/ModFiles/config/template/modConfigTemplate.json
@@ -95,6 +95,15 @@
             "descCN": "单位显示",
             "descEN": "Position Display",
             "configs": {
+				"miniMapCenterIconSize": {
+					"type": "slider",
+					"descCN": "小地图中心图标大小",
+					"descEN": "Mini Map Center Icon Size",
+					"default": 1.0,
+					"min": 0.2,
+					"max": 1.0,
+					"decimalPlaces": 1
+				},
                 "showOnlyActivated": {
                     "type": "toggle",
                     "descCN": "仅显示附近敌人（建议打开）",
@@ -119,11 +128,29 @@
                     "descEN": "Show Your Pet",
                     "default": true
                 },
+                "petIconSize": {
+                    "type": "slider",
+                    "descCN": "宠物图标大小",
+                    "descEN": "Pet Icon Size",
+                    "default": 0.8,
+                    "min": 0.2,
+                    "max": 1.0,
+                    "decimalPlaces": 1
+                },
                 "showBossPoi": {
                     "type": "toggle",
                     "descCN": "显示Boss图标",
                     "descEN": "Show Boss",
                     "default": true
+                },
+                "bossIconSize": {
+                    "type": "slider",
+                    "descCN": "Boss图标大小",
+                    "descEN": "Boss Icon Size",
+                    "default": 1.2,
+                    "min": 0.2,
+                    "max": 1.2,
+                    "decimalPlaces": 1
                 },
                 "showEnemyPoi": {
                     "type": "toggle",
@@ -136,7 +163,18 @@
                     "descCN": "显示中立单位图标",
                     "descEN": "Show Neutral",
                     "default": true
+                },
+                // ============ 新增图标大小设置 ============
+                "enemyIconSize": {
+                    "type": "slider",
+                    "descCN": "普通敌人/NPC/中立图标大小",
+                    "descEN": "Enemy/NPC/Neutral Icon Size",
+                    "default": 1.0,
+                    "min": 0.2,
+                    "max": 1.0,
+                    "decimalPlaces": 1
                 }
+                // ============ 新增结束 ============
             }
         },
         "HotKeys": {
