- ModSettingManager移至ZoinkModdingLibrary - ZoinkModdingLibrary增加Log管理，支持精确到方法的日志配置，可配置控制台输出及文件输出以及各自的输出等级，可自行配置log文件输出位置

--- a/BetterModUpload/BetterModUpload.csproj
+++ b/BetterModUpload/BetterModUpload.csproj
@@ -10,6 +10,17 @@
     <CopyPath>$(DuckovPath)\Mods\$(AssemblyName)</CopyPath>
     <LangVersion>10.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Using Include="ZoinkModdingLibrary.Logging" />
+    <AssemblyAttribute Include="LogAttribute">
+      <_Parameter1>Output</_Parameter1>
+      <_Parameter2>Output</_Parameter2>
+      <_Parameter3>Debug</_Parameter3>
+      <_Parameter4>Debug</_Parameter4>
+    </AssemblyAttribute>
+  </ItemGroup>
+  
   <ItemGroup>
     <!-- Harmony DLL -->
     <Reference Include="0Harmony">
